# bevy_spacetimedb

./: .gitignore  Cargo.toml  README.md
bevy_spacetimedb/: Cargo.toml
bevy_spacetimedb/src/: aliases.rs  channel_receiver.rs  events.rs  lib.rs  plugin.rs  reducers.rs  stdb_connection.rs  tables.rs
example_app/: Cargo.toml
example_app/src/: main.rs
example_app/src/stdb/: body_types_type.rs  galaxy_settings_table.rs  galaxy_settings_type.rs  game_server_type.rs  game_servers_table.rs  generate_galaxy_reducer.rs  generate_points_reducer.rs  gs_player_connected_reducer.rs  gs_player_disconnected_reducer.rs  gs_register_reducer.rs  gs_set_ready_reducer.rs  mod.rs  on_disconnected_reducer.rs  planet_type.rs  planets_table.rs  player_move_system_reducer.rs  player_register_reducer.rs  player_type.rs  players_table.rs  point_type.rs  points_table.rs  star_system_type.rs  star_systems_table.rs  subject_type.rs  subject_type_type.rs  subjects_table.rs
examples/: bevy_spacetimedb.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: aliases.rs  channel_receiver.rs  events.rs  lib.rs  plugin.rs  stdb_connection.rs
