[package]
name = "bevy_spacetimedb"
description = "USe SpacetimeDB in your Bevy application"
repository = "https://github.com/JulienLavocat/bevy_spacetimedb"
readme = "README.md"
version = "0.1.4"
edition = "2024"
license = "Apache-2.0"

[[example]]
name = "bevy_spacetimedb"
path = "examples/bevy_spacetimedb.rs"

[dependencies]
spacetimedb-sdk = "1.0.1"
bevy = "0.15.3"
