[package]
name = "bevy_spacetimedb_macros"
description = "Macros for bevy_spacetimedb"
repository = "https://github.com/JulienLavocat/bevy_spacetimedb"
readme = "../README.md"
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.40"
syn = "2.0.100"
heck = "0.5.0"
